fixed responsiveness on mobile

--- a/athlete/src/screens/Mental.css
+++ b/athlete/src/screens/Mental.css
@@ -13,24 +13,25 @@
     border-radius: 1rem;
     font-family: 'Spring';
     font-size: 0.8rem;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
 }
 
 .mental_Content > h3 {
     font-family: 'Spring';
-    margin-bottom: 4rem;
-    margin-top: 2rem;
+
 }
 
 .mental_Content > p {
     font-size: 1rem;
+    padding: 2rem;
     max-width: 700px;
 }
 
 .mental_Cards {
     display: flex;
-    margin-bottom: 4rem;
+    margin-bottom: 1rem;
     gap: 1rem;
+    margin-top: 3rem;
     align-items: center;
     justify-content: space-between;
 }
@@ -47,6 +48,8 @@
     background-color: #C4F969;
     color: #121212;
     padding: 1rem;
+    display: flex;
+    height: 100%;
     width: 100%;
     border-radius: 1rem;
 }
